Fix flex wrap of project links

--- a/src/Resume.css
+++ b/src/Resume.css
@@ -279,6 +279,7 @@
 
 .Resume-project-links {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .Resume-project-links > * {
